app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: default
  labels:
    app: demo-app
    component: service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: demo-app
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service-internal
  namespace: default
  labels:
    app: demo-app
    component: service-internal
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app: demo-app
